Fixed horizontal scroll

--- a/CBstyle2.css
+++ b/CBstyle2.css
@@ -37,6 +37,7 @@ body {
     font-style: normal;
     line-height: 1.61538;
     color: #888;
+    overflow-x:hidden;
 }
 .bg-light {
     background-color: #f6f9fc !important;
